--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="2.배열/5.Quiz2.js" defer></script>
+    <script src="4.함수/3.반환문.js" defer></script>
     <!-- 바디 실행 후 script 실행하라는 명령은 defer -->
 </head>
 <body>
