--- a/7.DOM제어/7.quiz.html
+++ b/7.DOM제어/7.quiz.html
@@ -30,6 +30,8 @@
   //### 여기부터는 innerHTML 사용 금지.
 
   //3. id="list"인 요소의 마지막 위치에 새요소 "<li>list_6</li>"를 추가하세요.
+
+  // 새요소 <li id="banana"></li>
   // const $liTags = document.getElementById('li');
   const $list = document.getElementById('list');
   const $list6 = document.createElement('li');
